# fb2k_obs_overlay

./: Cargo.toml  LICENSE.txt  README.md  jscript_panel_current_playing.js
.github/workflows/: rust.yml
src/: app.rs  assets.rs  main.rs  media_info.rs  templates.rs
src/media_info/: album_art.rs  json.rs  metadata.rs
src/templates/: main_page.rs  metadata.rs
templates/: main.css  main.html  main.js  metadata.json
