[package]
name = "NowPlayingWebOverlay"
version = "1.0.0"
edition = "2024"
license = "LICENSE.txt"
keywords = ["streaming", "music", "overlay", "webserver"]


[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0" }
md5 = { version = "0.8" }
askama = { version = "0.15", features = ["serde_json"] }
rust-embed = { version = "8.11" }
