[package]
name = "NowPlayingWebOverlay"
description = "A browser-based 'Now Playing' overlay for OBS, integrated with foobar2000 and local media library"
version = "1.0.0"
authors = ["Younhun Kim <youn.kim.3181@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/yk23/fb2k_obs_overlay"
keywords = ["streaming", "music", "overlay", "webserver"]


[dependencies]
log = { version = "0.4" }
env_logger = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0" }
md5 = { version = "0.8" }
askama = { version = "0.15", features = ["serde_json"] }
rust-embed = { version = "8.11" }
clap = { version = "4.5", features = ["derive"] }
